--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <style>
         body {
             font-family: 'Inter', sans-serif;
+            font-size: 0.875rem;
         }
         .exp i {
             border-radius: 9999px;
@@ -38,10 +39,15 @@
             left: 0;
             color: #707881; /* Tailwind's text-gray-400 color */
         }
+        .page-break {
+            page-break-before: always; /* or 'auto' */
+            page-break-inside: avoid; /* to avoid breaking inside elements */
+        }
     </style>
 </head>
 <body class="bg-gray-100 p-6">
 <div class="max-w-screen-lg mx-auto bg-white shadow-md rounded-lg p-6">
+<!--<div class="max-w-full bg-white rounded-lg p-6 mx-10">-->
     <header class="text-center mb-2">
         <h1 class="text-2xl font-bold">Jeffrey Moya</h1>
         <p class="text-sm text-gray-600">jeffreymoya@gmail.com <span class="text-gray-300 mx-2">|</span> +639455890141 <span class="text-gray-300 mx-2">|</span> Dasmariñas, Cavite, Philippines 4114</p>
@@ -171,6 +177,7 @@
                         </ul>
                     </li>
                 </ul>
+                <div class="page-break"></div>
             </li>
             <!-- Experience 6 -->
             <li>
@@ -205,6 +212,7 @@
                     </ul>
                 </div>
             </li>
+
             <!-- Experience 8 -->
             <li>
                 <div class="flex justify-between text-sm">
@@ -267,6 +275,13 @@
                     <span class="text-gray-500">03/2007 - 02/2008</span>
                 </div>
             </li>
+        </ul>
+    </section>
+    <section class="mt-10">
+        <h2 class="text-lg font-semibold mb-2">Education</h2>
+        <ul class="sub-list list-disc pl-5 text-sm text-gray-700">
+            <li>Bachelor of Technology in Information Technology, Technological University of the Philippines, 2006</li>
+            <li>Computer Engineering Technology, Technological University of the Philippines, 2005</li>
         </ul>
     </section>
 </div>
