--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
                     <li>
                         <ul class="sub-list list-disc pl-5 text-sm text-gray-700 mt-2 space-y-1">
                             <li>Led development while supporting and pair programming with two other mid-level developers</li>
-                            <li>Bootstraped Access Control with asynchronous RESTful APIs using <i>Spring Boot</i> <i>OpenAPI</i> <i>Lombok</i> with services integrating with <i>SpiceDB</i> <i>gRPC</i> <i>Kafka</i> <i>Avro</i> <i>MongoDB</i> <i>Postgres</i></li>
-                            <li>Implemented BDD testing with API and Kafka integration tests using <i>Cucumber</i> <i>Testcontainers</i> <i>JUnit</i></li>
+                            <li>Setup and established core services with asynchronous RESTful APIs <i>Spring Boot</i> <i>OpenAPI</i> <i>Java Futures</i> <i>Lombok</i> <i>gRPC</i> <i>Avro</i> and integration with <i>SpiceDB</i> <i>Kafka</i> <i>MongoDB</i> <i>Postgres</i></li>
+                            <li>Implemented BDD testing with API and <i>Kafka</i> integration tests using <i>Cucumber</i> <i>Testcontainers</i> <i>JUnit</i></li>
                             <li>Implemented <i>Kubernetes</i> configurations for <i>SpiceDB</i> <i>MongoDB</i> pods using <i>Kompose</i> for integration with the core CLI tool <i>Python</i> <i>Copier</i></li>
                             <li>Configured <i>Github</i>CI/CD using custom actions and workflow configuration<i>Docker</i> <i>YAML</i></li>
-                            <li>Created custom plugin for <i>Kong</i> and deployed data plane nodes for authentication and role authorization of configured routes</li>
+                            <li>Created custom plugin for authentication and role authorization of configured routes in <i>Kong</i> and deployed data plane nodes</li>
                         </ul>
                     </li>
                 </ul>
