--- a/print.html
+++ b/print.html
@@ -50,7 +50,11 @@
 <!--<div class="max-w-full bg-white rounded-lg p-6 mx-10">-->
     <header class="text-center mb-6">
         <h1 class="text-2xl font-bold">Jeffrey Moya</h1>
-        <p class="text-sm text-gray-600">jeffreymoya@gmail.com <span class="text-gray-300 mx-2">|</span> +639455890141 <span class="text-gray-300 mx-2">|</span> Dasmariñas, Cavite, Philippines 4114</p>
+        <p class="text-sm text-gray-600">jeffreymoya@gmail.com
+            <span class="text-gray-300 mx-2">|</span> +639455890141
+            <span class="text-gray-300 mx-2">|</span> Dasmariñas, Cavite, Philippines 4114
+            <span class="text-gray-300 mx-2">|</span> <a class="text-blue-700" href="https://www.linkedin.com/in/jeffreymoya/">LinkedIn</a>
+        </p>
     </header>
     <section>
         <ul class="space-y-3 exp">
@@ -64,40 +68,23 @@
                     <span class="text-gray-500">12/2018 - Current</span>
                 </div>
                 <ul class="list-none pl-5 text-sm text-gray-700 mt-2">
-                    <li class="font-semibold text-gray-500">access control module (part of a suite of standardized core services)</li>
                     <li>
                         <ul class="sub-list list-disc pl-5 text-sm text-gray-700 mt-2 space-y-1">
-                            <li>Led development while supporting and pair programming with two other mid-level developers</li>
-                            <li>Setup and established core services with asynchronous RESTful APIs <i>Spring Boot</i> <i>OpenAPI</i> <i>Java Futures</i> <i>Lombok</i> <i>gRPC</i> <i>Avro</i> and integration with <i>SpiceDB</i> <i>Kafka</i> <i>MongoDB</i> <i>Postgres</i></li>
-                            <li>Implemented BDD testing with API and <i>Kafka</i> integration tests using <i>Cucumber</i> <i>Testcontainers</i> <i>JUnit</i></li>
-                            <li>Implemented <i>Kubernetes</i> configurations for <i>SpiceDB</i> <i>MongoDB</i> pods using <i>Kompose</i> for integration with the core CLI tool <i>Python</i> <i>Copier</i></li>
-                            <li>Configured <i>Github</i>CI/CD using custom actions and workflow configuration<i>Docker</i> <i>YAML</i></li>
-                            <li>Created custom plugin for authentication and role authorization of configured routes in <i>Kong</i> and deployed data plane nodes</li>
+                            <li>Proactively identified and resolved issues across various client projects, reducing technical debt and ensuring high code quality and architectural integrity, with a focus on scalability, performance, and maintainability.</li>
+                            <li>Continuously drove technical innovation and process, tool, and methodology improvements within the team.</li>
+                            <li>Managed junior developers and reviewed code for readability, maintainability, and coding standards.</li>
+                            <li>Implemented security best practices and ensured compliance with banking and fintech regulations like PCI-DSS, GDPR, and PSD2, securing financial data and transactions.</li>
+                            <li>Streamlined CI/CD pipelines with automated builds, tests, and deployments, integrating repository events with Artifactory and image registries for efficient delivery.</li>
                         </ul>
                     </li>
                 </ul>
-                <ul class="list-none pl-5 text-sm text-gray-700 mt-2">
-                    <li class="font-semibold text-gray-500">insurance platform</li>
-                    <li>
-                        <ul class="sub-list list-disc pl-5 text-sm text-gray-700 mt-2 space-y-1">
-                            <li>Refactoring of code by reducing complexity and coupling through abstractions and design patterns and removing magic numbers, hard-coded variables and duplicates <i>Java 8+</i> <i>Spring Boot</i> <i>JPA</i> <i>Log4J</i></li>
-                            <li></li>
-                            <li>Implementation of front-end features using <i>Vue.js</i></li>
-                            <li>Developed <i>GraphQL</i> mutations and queries</li>
-                        </ul>
-                    </li>
-                </ul>
-                <ul class="list-none pl-5 text-sm text-gray-700 mt-2">
-                    <li class="font-semibold text-gray-500">digital banking platform</li>
-                    <li>
-                        <ul class="sub-list list-disc pl-5 text-sm text-gray-700 mt-2 space-y-1">
-                            <li>Collaborated with product management to define technical requirements and prioritize feature development <i>Lucidchart</i> <i>Jira</i></li>
-                            <li>Ensure compliance in PCI DSS standards through whitelisting, sanitizing of inputs, proper logging etc... <i>Spring Security</i> <i>Hibernate</i> <i>SLF4J</i> <i>Nginx</i></li>
-                            <li>Implementation and optimization of queries and parallel processing in ETL module <i>Apache POI</i> <i>PL/SQL</i> <i>Java 8+</i> <i>Spring Framework</i></li>
-                            <li>Handled all aspects of feature development, encompassing front-end and back-end implementation, delivery, and support, while closely collaborating with stakeholders from client banks to ensure the delivered solution meets specific requirements <i>React</i> <i>Redux</i> <i>Jest</i> <i>Spring REST</i> <i>JPA</i> <i>JUnit</i> <i>PL/SQL</i></li>
-                        </ul>
-                    </li>
-                </ul>
+
+                <div class="text-sm text-gray-700 ml-10 my-4">
+                    <span>Technologies:</span>
+                    <span class="text-pretty font-semibold">
+                        Java, Spring, JPA, Hibernate, Cucumber, Python, React.js, Vue.js, AWS, Docker, Kubernetes, Kong, OpenAI, PostgreSQL, GraphQL, Microservice, RestfulAPI, OAuth, RBAC, API Gateway, Event-Driven, BDD Testing, Design Patterns, CI/CD, Agile, Scrum
+                    </span>
+                </div>
             </li>
             <!-- Experience 2 -->
             <li>
@@ -109,35 +96,45 @@
                     <span class="text-gray-500">04/2016 - 12/2018</span>
                 </div>
                 <ul class="list-none pl-5 text-sm text-gray-700 mt-2 space-y-1">
-                    <li class="font-semibold text-gray-500">HRIS (Human Resource Information System) & Payroll Management</li>
                     <li>
                         <ul class="sub-list list-disc pl-5 text-sm text-gray-700 mt-2 space-y-1">
-                            <li>Collaborated with Solution Architect to design and implement a new event-driven distributed application using microservices that will replace the legacy system <i>Spring AMQP</i> <i>Spring Data</i> <i>JPA</i> <i>MongoDB</i> <i>Redis</i> <i>Docker</i> <i>AWS</i> <i>JUnit</i> <i>Liquibase</i> <i>Jersey</i></li>
-                            <li>Designed and implemented a new flexible and extensible payroll engine that improved payroll computation time by several folds using partitioning, event sourcing, caching and design patterns e.g. Chain of Responsibility, Strategy, Immutable Object <i>RabbitMQ</i> <i>Jackson XML</i> <i>Java 8+</i> <i>Guava</i> <i>Redis</i> <i>Docker</i></li>
-                            <li>Provided knowledge sharing and code review to junior frontend devs <i>React</i> <i>CSS Modules</i></li>
+                            <li>Contributed to the design and architecture of software systems, making decisions on tools, platforms, and coding practices.</li>
+                            <li>Optimized application for speed, scalability, and reliability, ensuring high code quality by adhering to best practices, coding standards, and performance metrics.</li>
+                            <li>Provided guidance, support, and mentorship to less experienced team members to foster skill development.</li>
                         </ul>
                     </li>
                 </ul>
+
+                <div class="text-sm text-gray-700 ml-10 my-4">
+                    <span>Technologies:</span>
+                    <span class="text-pretty font-semibold">
+                        Java, Spring Data, Spring AMPQ, Spring Security, Jackson, Redis, AWS ECS, AWS S3, AWS Lambda, Docker, MongoDB, MySQL, Microservice, Design Patterns, Performance Optimization, TDD, Serverless, SOLID Principles
+                    </span>
+                </div>
             </li>
             <!-- Experience 3 -->
             <li>
                 <div class="flex justify-between text-sm">
-                    <span class="font-semibold">Full Stack Developer, Private</span>
+                    <span class="font-semibold">Full Stack Developer, Freelance</span>
                     <span class="text-gray-300 mx-2">|</span>
                     <p class="text-gray-600 text-sm">Remote, Philippines</p>
                     <div class="flex-grow"></div>
                     <span class="text-gray-500">03/2015 - 04/2016</span>
                 </div>
                 <ul class="list-none pl-5 text-sm text-gray-700 mt-2 space-y-1">
-                    <li class="font-semibold text-gray-500">EFT (electronic fund transfer) portal</li>
                     <li>
                         <ul class="sub-list list-disc pl-5 text-sm text-gray-700 mt-2 space-y-1">
-                            <li>Designed and developed application from scratch <i>React</i> <i>Node.js</i> <i>Express</i> <i>MongoDB</i> <i>Mongoose</i> <i>Axios</i> <i>Lodash</i> <i>AWS</i> </li>
-                            <li>Integrated payment gateways with strict compliance to PCI DSS standards <i>JWT</i> <i>HTTPS</i> <i>CSP</i> <i>Swagger</i> <i>3DS Secure</i> <i>Helmet</i> <i>Bcrypt</i> <i>Joi</i></li>
-                            <li>Implemented CNP (card not present) feature <i>Stripe SDK</i> <i>Paypal</i> <i>Csurf</i> </li>
+                            <li>Designed and developed various applications e.g. CMS, SaaS, e-commerce, and custom web applications.</li>
                         </ul>
                     </li>
                 </ul>
+
+                <div class="text-sm text-gray-700 ml-10 my-4">
+                    <span>Technologies:</span>
+                    <span class="text-pretty font-semibold">
+                        Java, JPA, Hibernate, Liquibase, TypeScript, Node.js, Elasticsearch, Nginx, Docker, WordPress, MySQL, Google Cloud, Jenkins, JWT, Multithreading, SaaS, Full-SDLC Development
+                    </span>
+                </div>
             </li>
             <!-- Experience 4 -->
             <li>
@@ -148,16 +145,13 @@
                     <div class="flex-grow"></div>
                     <span class="text-gray-500">06/2014 - 03/2015</span>
                 </div>
-                <ul class="list-none pl-5 text-sm text-gray-700 mt-2 space-y-1">
-                    <li class="font-semibold text-gray-500">digital banking platform</li>
+                <!--<ul class="list-none pl-5 text-sm text-gray-700 mt-2 space-y-1">
                     <li>
                         <ul class="sub-list list-disc pl-5 text-sm text-gray-700 mt-2 space-y-1">
                             <li>Closely collaborated with swiss Project Manager for spearheading Manila team</li>
-                            <li>Guided junior developers with good coding practices <i>Java</i> <i>Servlet</i> <i>JSP</i> <i>Freemarker</i></li>
-                            <li>Pair programming in the frontend with guidance on the quirks and features of <i>JavaScript</i> <i>JQuery</i> <i>XML</i> </li>
                         </ul>
                     </li>
-                </ul>
+                </ul>-->
             </li>
             <!-- Experience 5 -->
             <li>
@@ -168,7 +162,7 @@
                     <div class="flex-grow"></div>
                     <span class="text-gray-500">10/2013 - 05/2014</span>
                 </div>
-                <ul class="list-none pl-5 text-sm text-gray-700 mt-2 space-y-1">
+                <!--<ul class="list-none pl-5 text-sm text-gray-700 mt-2 space-y-1">
                     <li class="font-semibold text-gray-500">Macquarie</li>
                     <li>
                         <ul class="sub-list list-disc pl-5 text-sm text-gray-700 mt-2 space-y-1">
@@ -176,8 +170,7 @@
                         <li>Worked on internal services <i>Java SE Embedded</i> <i>JavaFX</i></li>
                         </ul>
                     </li>
-                </ul>
-<!--                <div class="page-break"></div>-->
+                </ul>-->
             </li>
             <!-- Experience 6 -->
             <li>
@@ -188,14 +181,14 @@
                     <div class="flex-grow"></div>
                     <span class="text-gray-500">02/2013 - 09/2013</span>
                 </div>
-                <ul class="list-none pl-5 text-sm text-gray-700 mt-2 space-y-1">
+                <!--<ul class="list-none pl-5 text-sm text-gray-700 mt-2 space-y-1">
                     <li class="font-semibold text-gray-500">Meralco</li>
                     <li>
                         <ul class="sub-list list-disc pl-5 text-sm text-gray-700 mt-2 space-y-1">
                             <li>Worked with internal software and services <i>Java</i> <i>PL/SQL</i> <i>WebSphere</i> <i>JavaScript</i></li>
                         </ul>
                     </li>
-                </ul>
+                </ul>-->
             </li>
             <!-- Experience 7 -->
             <li>
@@ -206,11 +199,11 @@
                     <div class="flex-grow"></div>
                     <span class="text-gray-500">12/2011 - 12/2012</span>
                 </div>
-                <div class="ml-5">
+                <!--<div class="ml-5">
                     <ul class="sub-list list-disc text-sm text-gray-700 mt-2 space-y-1">
                         <li>Coordinated technical research and development of products and solutions. <i>Java</i> <i>Servlet</i> <i>MySQL</i> <i>JQuery</i></li>
                     </ul>
-                </div>
+                </div>-->
             </li>
 
             <!-- Experience 8 -->
@@ -222,11 +215,11 @@
                     <div class="flex-grow"></div>
                     <span class="text-gray-500">03/2011 - 09/2011</span>
                 </div>
-                <div class="ml-5">
+                <!--<div class="ml-5">
                     <ul class="sub-list list-disc text-sm text-gray-700 mt-2 space-y-1">
                         <li>Cross-functional development across different clients <i>Java</i> <i>Struts</i> <i>Hibernate</i> <i>XML</i> <i>Java ME</i> <i>Postgres</i></li>
                     </ul>
-                </div>
+                </div>-->
             </li>
             <!-- Experience 9 -->
             <li>
