--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
             <span class="text-gray-300 mx-2">|</span> +639455890141
             <span class="text-gray-300 mx-2">|</span> Dasmariñas, Cavite, Philippines 4114
             <span class="text-gray-300 mx-2">|</span> <a class="text-blue-700" href="https://www.linkedin.com/in/jeffreymoya/">LinkedIn</a>
+            <span class="text-gray-300 mx-2">|</span> <a class="text-blue-700" href="https://github.com/jeffreymoya/access-control/commits/main/?author=jeffreymoya">Sample Work</a>
+            <span class="text-gray-300 mx-2">|</span> <a class="text-blue-700" href="https://jeffreymoya.github.io/Jeffrey_Moya_-_Senior_Software_Engineer.pdf">Download CV</a>
         </p>
     </header>
     <section>
