--- a/reviewer.html
+++ b/reviewer.html
@@ -2,74 +2,176 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Interactive Q&A</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Interactive Q&A - Dark Mode</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
+            font-family: 'Roboto', sans-serif;
+            background-color: #1e1e1e;
+            color: #dcdcdc;
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+        }
+        h1 {
+            text-align: center;
+            color: #f1f1f1;
+        }
+        strong {
+            font-weight: 500;
+        }
+        .menu, .qa-container, .back-button {
+            display: none;
+        }
+        .menu.active, .qa-container.active, .back-button.active {
+            display: block;
+        }
+        .menu-item {
+            padding: 10px;
+            margin: 10px 0;
+            background-color: #333;
+            border: 1px solid #444;
+            border-radius: 5px;
+            cursor: pointer;
+            font-weight: 500;
+            transition: background-color 0.3s ease, box-shadow 0.3s ease;
+        }
+        .menu-item:hover {
+            background-color: #444;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
         }
         .question {
-            margin-bottom: 10px;
+            margin-bottom: 15px;
+            padding: 15px;
+            background-color: #333;
+            border: 1px solid #444;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease, box-shadow 0.3s ease;
+        }
+        .question:hover {
+            background-color: #444;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
         }
         .answer {
             display: none;
             margin-left: 20px;
-            color: #555;
+            margin-top: 10px;
+            color: #b0b0b0;
+            background-color: #2a2a2a;
+            padding: 10px;
+            border-left: 4px solid #007bff;
+            border-radius: 3px;
+            transition: max-height 0.3s ease;
         }
-        .toggle-btn {
-            margin-left: 10px;
+        .show-all, .hide-all {
             cursor: pointer;
-            color: blue;
-            text-decoration: underline;
+            color: #007bff;
+            margin: 10px;
+            text-align: right;
+        }
+        .show-all:hover, .hide-all:hover {
+            color: #66a3ff;
+        }
+        .back-button {
+            cursor: pointer;
+            color: #007bff;
+            margin: 10px 0;
+            text-align: left;
+        }
+        .back-button:hover {
+            color: #66a3ff;
         }
     </style>
 </head>
 <body>
 
-<h1>Technical Interview Questions</h1>
-<div id="qa-container"></div>
+<h1>Interactive Q&A</h1>
+<div id="menu" class="menu active"></div>
+<div class="back-button">← Back</div>
+<div id="qa-container" class="qa-container"></div>
+<div class="back-button">← Back</div>
 
 <script>
-  // Fetch the JSON data
-  fetch('https://jeffreymoya.github.io/questions.json')
-    .then(response => response.json())
-    .then(data => {
-      const container = document.getElementById('qa-container');
+  const menuContainer = document.getElementById('menu');
+  const qaContainer = document.getElementById('qa-container');
+  const backButton = document.getElementsByClassName('back-button');
 
-      data.forEach((item, index) => {
-        // Create question element
-        const questionEl = document.createElement('div');
-        questionEl.className = 'question';
-        questionEl.innerHTML = `<strong>${item.question}</strong>`;
+  // Function to fetch and display directory labels
+  function loadDirectory() {
+    fetch('directory.json')
+      .then(response => response.json())
+      .then(data => {
+        data.forEach((item, index) => {
+          const menuItem = document.createElement('div');
+          menuItem.className = 'menu-item';
+          menuItem.textContent = item.label;
+          menuItem.addEventListener('click', () => loadQuestions(item.file));
+          menuContainer.appendChild(menuItem);
+        });
+      })
+      .catch(error => console.error('Error fetching directory.json:', error));
+  }
 
-        // Create toggle button
-        const toggleBtn = document.createElement('span');
-        toggleBtn.className = 'toggle-btn';
-        toggleBtn.textContent = 'Show Answer';
-        toggleBtn.addEventListener('click', () => {
-          const answerEl = questionEl.querySelector('.answer');
-          if (answerEl.style.display === 'none') {
-            answerEl.style.display = 'block';
-            toggleBtn.textContent = 'Hide Answer';
-          } else {
-            answerEl.style.display = 'none';
-            toggleBtn.textContent = 'Show Answer';
-          }
+  // Function to load questions from a JSON file
+  function loadQuestions(filename) {
+    fetch(`questions/${filename}`)
+      .then(response => response.json())
+      .then(data => {
+        // Clear previous content
+        qaContainer.innerHTML = '';
+
+        data.forEach((item, index) => {
+          // Create question element
+          const questionEl = document.createElement('div');
+          questionEl.className = 'question';
+          questionEl.innerHTML = `<strong>${item.question}</strong>`;
+
+          // Create answer element
+          const answerEl = document.createElement('div');
+          answerEl.className = 'answer';
+          answerEl.textContent = item.answer;
+          questionEl.appendChild(answerEl);
+
+          // Add event listener to toggle answer visibility
+          questionEl.addEventListener('click', () => {
+            if (answerEl.style.display === 'none' || !answerEl.style.display) {
+              answerEl.style.display = 'block';
+              answerEl.style.maxHeight = answerEl.scrollHeight + 'px';
+            } else {
+              answerEl.style.maxHeight = '0';
+              setTimeout(() => answerEl.style.display = 'none', 300);
+            }
+          });
+
+          // Append to container
+          qaContainer.appendChild(questionEl);
         });
 
-        questionEl.appendChild(toggleBtn);
+        // Switch view
+        menuContainer.classList.remove('active');
+        qaContainer.classList.add('active');
+        Array.from(backButton).forEach(button => {
+          button.classList.add('active')
+        });
+      })
+      .catch(error => console.error('Error fetching questions:', error));
+  }
 
-        // Create answer element
-        const answerEl = document.createElement('div');
-        answerEl.className = 'answer';
-        answerEl.textContent = item.answer;
-        questionEl.appendChild(answerEl);
+  // Back button to return to menu
+  Array.from(backButton).forEach(button => {
+    button.addEventListener('click', () => {
+      qaContainer.classList.remove('active');
+      button.classList.remove('active');
+      menuContainer.classList.add('active');
+    });
+  });
 
-        // Append to container
-        container.appendChild(questionEl);
-      });
-    })
-    .catch(error => console.error('Error fetching JSON:', error));
+  // Load directory on page load
+  loadDirectory();
 </script>
 
 </body>
