--- a/fullstack.html
+++ b/fullstack.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jeffrey Moya - Senior Software Engineer</title>
+    <title>Jeffrey Moya - Senior Full Stack Developer</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <style>
@@ -59,7 +59,7 @@
             <span class="text-gray-300 mx-2">|</span> +639455890141
             <span class="text-gray-300 mx-2">|</span> Dasmariñas, Cavite, Philippines 4114
             <span class="text-gray-300 mx-2">|</span> <a class="text-blue-700" href="https://www.linkedin.com/in/jeffreymoya/" target="_blank">LinkedIn</a>
-            <span class="text-gray-300 mx-2">|</span> <a class="text-blue-700" href="https://github.com/jeffreymoya/core-ac/commits/main/?author=jeffreymoya" target="_blank">Sample Work</a>
+            <span class="text-gray-300 mx-2">|</span> <a class="text-blue-700" href="https://github.com/jeffreymoya/access-control/commits/main/?author=jeffreymoya" target="_blank">Sample Work</a>
             <span class="text-gray-300 mx-2">|</span> <a class="text-blue-700" href="https://jeffreymoya.github.io/Jeffrey_Moya_-_Senior_Software_Engineer.pdf">Download CV</a>
         </p>
     </header>
@@ -89,7 +89,7 @@
                 <div class="text-sm text-gray-700 ml-10 my-4">
                     <span>Technologies:</span>
                     <span class="text-pretty font-semibold">
-                        Java, Spring, JPA, Hibernate, Cucumber, Python, React.js, Vue.js, AWS, Docker, Kubernetes, Kong, OpenAI, PostgreSQL, GraphQL, Microservice, RestfulAPI, OAuth, RBAC, API Gateway, Event-Driven, BDD Testing, Design Patterns, CI/CD, Agile, Scrum
+                        React.js, Redux, TypeScript, Node.js, Express, Prisma, Socket.io, Jest, Mocha, Java, Vue.js, AWS, Docker, OpenAI, PostgreSQL, GraphQL, Microservice, RestfulAPI, OAuth, RBAC, API Gateway, Event-Driven, BDD Testing, Design Patterns, CI/CD, Agile, Scrum
                     </span>
                 </div>
             </li>
@@ -115,7 +115,7 @@
                 <div class="text-sm text-gray-700 ml-10 my-4">
                     <span>Technologies:</span>
                     <span class="text-pretty font-semibold">
-                        Java, Spring Data, Spring AMPQ, Spring Security, Jackson, Redis, AWS ECS, AWS S3, AWS Lambda, Docker, MongoDB, MySQL, Microservice, Design Patterns, Performance Optimization, TDD, Serverless, SOLID Principles
+                        React.js, Node.js, TypeORM, Express, Knex, Mocha, Supertest, Redis, AWS ECS, AWS S3, AWS Lambda, Docker, MongoDB, MySQL, Microservice, Design Patterns, Performance Optimization, TDD, Serverless
                     </span>
                 </div>
             </li>
