--- a/print_fullstack.html
+++ b/print_fullstack.html
@@ -11,7 +11,6 @@
             font-family: 'Inter', sans-serif;
             font-size: 0.875rem;
         }
-
         .exp i {
             border-radius: 9999px;
             font-size: 0.8rem;
@@ -24,43 +23,37 @@
             padding: 0.20rem 0.35rem;
             white-space: nowrap;
         }
-
         .sub-list {
             list-style-type: none;
             list-style-position: outside;
             padding-left: 1em;
         }
-
         .sub-list li {
             position: relative;
             padding-left: 1em;
             margin-bottom: 0.5em;
         }
-
         .sub-list li:before {
             content: '•';
             position: absolute;
             left: 0;
             color: #707881; /* Tailwind's text-gray-400 color */
         }
-
         .page-break {
             page-break-before: always; /* or 'auto' */
             page-break-inside: avoid; /* to avoid breaking inside elements */
         }
     </style>
 </head>
-<body class="bg-gray-100 p-6">
-<div class="max-w-screen-lg mx-auto bg-white shadow-md rounded-lg p-6">
-    <!--<div class="max-w-full bg-white rounded-lg p-6 mx-10">-->
-    <header class="text-center mb-2">
+<body>
+<div class="max-w-full bg-white mx-32 mt-6">
+<!--<div class="max-w-full bg-white rounded-lg p-6 mx-10">-->
+    <header class="text-center mb-6">
         <h1 class="text-2xl font-bold">Jeffrey Moya</h1>
         <p class="text-sm text-gray-600">jeffreymoya@gmail.com
             <span class="text-gray-300 mx-2">|</span> +639455890141
             <span class="text-gray-300 mx-2">|</span> Dasmariñas, Cavite, Philippines 4114
-            <span class="text-gray-300 mx-2">|</span> <a class="text-blue-700" href="https://www.linkedin.com/in/jeffreymoya/" target="_blank">LinkedIn</a>
-            <span class="text-gray-300 mx-2">|</span> <a class="text-blue-700" href="https://github.com/jeffreymoya/core-ac/commits/main/?author=jeffreymoya" target="_blank">Sample Work</a>
-            <span class="text-gray-300 mx-2">|</span> <a class="text-blue-700" href="https://jeffreymoya.github.io/Jeffrey_Moya_-_Senior_Software_Engineer.pdf">Download CV</a>
+            <span class="text-gray-300 mx-2">|</span> <a class="text-blue-700" href="https://www.linkedin.com/in/jeffreymoya/">LinkedIn</a>
         </p>
     </header>
     <section>
@@ -89,7 +82,7 @@
                 <div class="text-sm text-gray-700 ml-10 my-4">
                     <span>Technologies:</span>
                     <span class="text-pretty font-semibold">
-                        Java, Spring, JPA, Hibernate, Cucumber, Python, React.js, Vue.js, AWS, Docker, Kubernetes, Kong, OpenAI, PostgreSQL, GraphQL, Microservice, RestfulAPI, OAuth, RBAC, API Gateway, Event-Driven, BDD Testing, Design Patterns, CI/CD, Agile, Scrum
+                        React.js, Next.js, TypeScript, Node.js, Express, Prisma, Socket.io, Jest, Mocha, Java, Vue.js, AWS, Docker, OpenAI, PostgreSQL, GraphQL, Microservice, RestfulAPI, OAuth, RBAC, API Gateway, Event-Driven, BDD Testing, Design Patterns, CI/CD, Agile, Scrum
                     </span>
                 </div>
             </li>
@@ -115,7 +108,7 @@
                 <div class="text-sm text-gray-700 ml-10 my-4">
                     <span>Technologies:</span>
                     <span class="text-pretty font-semibold">
-                        Java, Spring Data, Spring AMPQ, Spring Security, Jackson, Redis, AWS ECS, AWS S3, AWS Lambda, Docker, MongoDB, MySQL, Microservice, Design Patterns, Performance Optimization, TDD, Serverless, SOLID Principles
+                        React.js, Redux/Toolkit, Node.js, TypeORM, Express, Knex, Mocha, Supertest, Redis, AWS ECS, AWS S3, AWS Lambda, Docker, MongoDB, MySQL, Microservice, Design Patterns, Performance Optimization, TDD, Serverless
                     </span>
                 </div>
             </li>
@@ -139,7 +132,7 @@
                 <div class="text-sm text-gray-700 ml-10 my-4">
                     <span>Technologies:</span>
                     <span class="text-pretty font-semibold">
-                        Java, JPA, Hibernate, Liquibase, TypeScript, Node.js, Elasticsearch, Nginx, Docker, WordPress, MySQL, Google Cloud, Jenkins, JWT, Multithreading, SaaS, Full-SDLC Development
+                        React.js, TypeScript, React Form, Zod, Sequelize, Jest, Node.js, Nginx, Docker, WordPress, MySQL, Google Cloud, Jenkins, JWT, Multithreading, SaaS, Full-SDLC Development
                     </span>
                 </div>
             </li>
@@ -173,13 +166,11 @@
                     <li class="font-semibold text-gray-500">Macquarie</li>
                     <li>
                         <ul class="sub-list list-disc pl-5 text-sm text-gray-700 mt-2 space-y-1">
-                            <li>Closely collaborated with internal clients on feature requests <i>Java</i> <i>EJB</i>
-                                <i>Struts</i></li>
-                            <li>Worked on internal services <i>Java SE Embedded</i> <i>JavaFX</i></li>
+                        <li>Closely collaborated with internal clients on feature requests <i>Java</i> <i>EJB</i> <i>Struts</i></li>
+                        <li>Worked on internal services <i>Java SE Embedded</i> <i>JavaFX</i></li>
                         </ul>
                     </li>
                 </ul>-->
-                <div class="page-break"></div>
             </li>
             <!-- Experience 6 -->
             <li>
@@ -194,8 +185,7 @@
                     <li class="font-semibold text-gray-500">Meralco</li>
                     <li>
                         <ul class="sub-list list-disc pl-5 text-sm text-gray-700 mt-2 space-y-1">
-                            <li>Worked with internal software and services <i>Java</i> <i>PL/SQL</i> <i>WebSphere</i>
-                                <i>JavaScript</i></li>
+                            <li>Worked with internal software and services <i>Java</i> <i>PL/SQL</i> <i>WebSphere</i> <i>JavaScript</i></li>
                         </ul>
                     </li>
                 </ul>-->
@@ -211,8 +201,7 @@
                 </div>
                 <!--<div class="ml-5">
                     <ul class="sub-list list-disc text-sm text-gray-700 mt-2 space-y-1">
-                        <li>Coordinated technical research and development of products and solutions. <i>Java</i> <i>Servlet</i>
-                            <i>MySQL</i> <i>JQuery</i></li>
+                        <li>Coordinated technical research and development of products and solutions. <i>Java</i> <i>Servlet</i> <i>MySQL</i> <i>JQuery</i></li>
                     </ul>
                 </div>-->
             </li>
@@ -228,8 +217,7 @@
                 </div>
                 <!--<div class="ml-5">
                     <ul class="sub-list list-disc text-sm text-gray-700 mt-2 space-y-1">
-                        <li>Cross-functional development across different clients <i>Java</i> <i>Struts</i>
-                            <i>Hibernate</i> <i>XML</i> <i>Java ME</i> <i>Postgres</i></li>
+                        <li>Cross-functional development across different clients <i>Java</i> <i>Struts</i> <i>Hibernate</i> <i>XML</i> <i>Java ME</i> <i>Postgres</i></li>
                     </ul>
                 </div>-->
             </li>
