add portfolio page

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <span class="text-gray-300 mx-2">|</span> +639455890141
             <span class="text-gray-300 mx-2">|</span> Dasmariñas, Cavite, Philippines 4114
             <span class="text-gray-300 mx-2">|</span> <a class="text-blue-700" href="https://www.linkedin.com/in/jeffreymoya/" target="_blank">LinkedIn</a>
-            <span class="text-gray-300 mx-2">|</span> <a class="text-blue-700" href="https://github.com/jeffreymoya/core-ac/commits/main/?author=jeffreymoya" target="_blank">Sample Work</a>
+            <span class="text-gray-300 mx-2">|</span> <a class="text-blue-700" href="portfolio.html" target="_blank">Recent Work</a>
             <span class="text-gray-300 mx-2">|</span> <a class="text-blue-700" href="https://jeffreymoya.github.io/Jeffrey_Moya_-_Senior_Software_Engineer.pdf">Download CV</a>
         </p>
     </header>
