--- a/leavetracker.html
+++ b/leavetracker.html
@@ -121,10 +121,10 @@
                     <div class="flex-shrink-0 w-8 h-8 bg-blue-600 text-white rounded-full flex items-center justify-center">3</div>
                     <p class="text-gray-600">Agile development with weekly progress demos</p>
                 </div>
-                <div class="flex items-center space-x-3">
+                <!-- <div class="flex items-center space-x-3">
                     <div class="flex-shrink-0 w-8 h-8 bg-blue-600 text-white rounded-full flex items-center justify-center">4</div>
                     <p class="text-gray-600">Production rollout with documentation and training</p>
-                </div>
+                </div> -->
             </div>
         </div>
 
@@ -141,7 +141,7 @@
     <footer class="border-t border-gray-200">
         <div class="max-w-6xl mx-auto px-4 py-8">
             <p class="text-center text-gray-600">
-                © 2024 Synph Leave Tracker. Developed independently as an internal solution.
+                © 2025 Synph Leave Tracker. Developed independently as an internal solution.
             </p>
         </div>
     </footer>
